// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Calendar > month picker mode > matches the month picker snapshot 1`] = `
"        June        ×

  Jan    Feb    Mar
  Apr    May    Jun
  Jul    Aug    Sep
  Oct    Nov    Dec"
`;

exports[`Calendar > rendering > matches the fixed grid for a 31-day month starting on friday 1`] = `
" ◃  October   2021  ▹
 Su Mo Tu We Th Fr Sa
 26 27 28 29 30  1  2
  3  4  5  6  7  8  9
 10 11 12 13 14 15 16
 17 18 19 20 21 22 23
 24 25 26 27 28 29 30
 31  1  2  3  4  5  6"
`;

exports[`Calendar > rendering > matches the fixed grid for a february starting on monday 1`] = `
" ◃  February  2021  ▹
 Su Mo Tu We Th Fr Sa
 31  1  2  3  4  5  6
  7  8  9 10 11 12 13
 14 15 16 17 18 19 20
 21 22 23 24 25 26 27
 28  1  2  3  4  5  6
  7  8  9 10 11 12 13"
`;

exports[`Calendar > rendering > matches the fixed grid for monday-first rendering 1`] = `
" ◃  February  2021  ▹
 Mo Tu We Th Fr Sa Su
  1  2  3  4  5  6  7
  8  9 10 11 12 13 14
 15 16 17 18 19 20 21
 22 23 24 25 26 27 28
  1  2  3  4  5  6  7
  8  9 10 11 12 13 14"
`;

exports[`Calendar > rendering > renders the month header and weekday row 1`] = `
" ◃    June    2026  ▹
 Su Mo Tu We Th Fr Sa
 31  1  2  3  4  5  6
  7  8  9 10 11 12 13
 14 15 16 17 18 19 20
 21 22 23 24 25 26 27
 28 29 30  1  2  3  4
  5  6  7  8  9 10 11"
`;

exports[`Calendar > rendering > renders with focus 1`] = `
" ◃  October   2021  ▹
╭Su─Mo─Tu─We─Th─Fr─Sa╮
│26 27 28 29 30  1  2│
│ 3  4  5  6  7  8  9│
│10 11 12 13 14 15 16│
│17 18 19 20 21 22 23│
│24 25 26 27 28 29 30│
╰31─ 1─ 2─ 3─ 4─ 5─ 6╯"
`;

exports[`Calendar > year picker mode > matches the year picker snapshot 1`] = `
"        Year        ×
        [ ↑ ]
         2024
         2025
         2026
         2027
         2028
        [ ↓ ]"
`;
